# h48

./: .gitignore  LICENSE  Makefile  README.md  TODO.txt  TODO_COORDINATES  build  config.mk  configure.sh  convert.sh  cube.c  cube.h  debugrun  h48_to_src  run-old  shell.c  transavx
benchmark/: bench.c  bench.sh  benchmark.h  benchmark.sh
cpp/: nissy.cpp  nissy.h
doc/: CUBE_INTERNAL.md  CUBE_TEXT.md  h48.md  transformations.md
old/: _trans_move_arr.c  cube_h_with_format_documentation  gendata_bfs_attempt.c  inverse_fast.c  inverses.c
python/: example.py  nissy_module.c
qt/: CMakeLists.txt  Main.qml  Makefile  NissyMain.qml  adapter.cpp  adapter.h  main.cpp
shell/: shell.c  test.sh
src/: _base_arr.c  _base_avx2.c  _constants.c  _move_logic_arr.c  _move_logic_avx2.c  _moves_arr.c  _moves_avx2.c  _trans_arr.c  _trans_avx2.c  _trans_move_avx2.c  constant_cubes.h  constants.h  cube.c  cube.h  cube.sync-conflict-20230524-181836-JOKKFPA.c  cube.sync-conflict-20230524-182146-JOKKFPA.h  cube_array.c  cube_array.h  cube_avx2.h  cube_generic.h  cube_neon.h  cube_portable.h  cube_public.h  cube_routines.h  cube_transform.h  cube_transform_with_switch.h  io_cube.h  io_move_trans.h  nissy.c  nissy.h  solve_generic.h  solve_h48.h  utils.h
tables/: tables.c
test/: last.out  run  test  test.h  test.sh
tools/: expected_distributions.h  nissy_extra.h  run_tool.sh  timerun.h  tool.h  tool.sh
utils/: FORMAT.txt  TRANSFORMATIONS.txt  convert.c  detect-immintrin.c  genmovecode.sh  genmoveswitch.sh  gentranscode.sh  gentransswitch.sh  gentranstests.sh  h48_to_avx.c  (+31 more)
(+1121 files in other folders)
